essai deuxième partie

--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -90,6 +90,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "ceci est un essai pour réponde à la deuxième partie"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
