--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -83,11 +83,11 @@
     "\n",
     "$\\operatorname{Cov}\\left(Y_{n}, Y_{n^{\\prime}}{ }\\right)=\\mathbb{E}\\left(\\left(Y_{n}-\\mathbb{E}\\left(Y_{n}\\right)\\right)\\left(Y_{n^{\\prime}}-\\mathbb{E}\\left(Y_{n^{\\prime}}\\right)\\right)\\right)$\n",
     "\n",
-    "$=\\mathbb{E}\\left(Y_{n} Y_{n}{ }^{\\prime}\\right)=\\mathbb{E}\\left(Y_{n} \\sum_{i=1}^{n^{\\prime}} X_{i}\\right)=\\mathbb{E}\\left(Y_{n}\\left(Y_{n}+\\sum_{i=n+1}^{n^{\\prime}} X_{i}\\right)\\right)$\n",
+    "$=\\mathbb{E}\\left(Y_{n} Y_{n^{\\prime}}\\right)=\\mathbb{E}\\left(Y_{n} \\sum_{i=1}^{n^{\\prime}} X_{i}\\right)=\\mathbb{E}\\left(Y_{n}\\left(Y_{n}+\\sum_{i=n+1}^{n^{\\prime}} X_{i}\\right)\\right)$\n",
     "\n",
-    "$=\\mathbb{E}\\left(Y_{n}{ }^{2}\\right)+\\mathbb{E}\\left(Y_{n} \\sum_{i=n+1}^{n^{\\prime}} x_{i}\\right)$\n",
+    "$=\\mathbb{E}\\left(Y_{n}{ }^{2}\\right)+\\mathbb{E}\\left(Y_{n} \\sum_{i=n+1}^{n^{\\prime}} X_{i}\\right)$\n",
     "\n",
-    "$=\\mathbb{V}\\left(Y_{n}\\right)+\\mathbb{E}\\left(Y_{n}\\right) \\mathbb{F}\\left(\\sum_{i=n+1}^{n^{\\prime}}x_{i}\\right)$ car $Y_n$ indépendent des $(X_i)_{i>n+1}$ (par indépendance des $(X_i)$)\n",
+    "$=\\mathbb{V}\\left(Y_{n}\\right)+\\mathbb{E}\\left(Y_{n}\\right) \\mathbb{E}\\left(\\sum_{i=n+1}^{n^{\\prime}}X_{i}\\right)$ car $Y_n$ indépendent des $(X_i)_{i>n+1}$ (par indépendance des $(X_i)$)\n",
     "\n",
     "$=n+0=n$\n",
     "\n",
@@ -113,7 +113,8 @@
    "metadata": {},
    "source": [
     "5)\n",
-    "On applique le théorème central limite (TCL):\n",
+    "On applique le théorème central limite (TCL) :\n",
+    "\n",
     "Les $X_i$ sont bien indépendants et identiquement distribués, leur espérance vaut $\\mu=0$ et leur variance $\\sigma^2=1$.\n",
     "\n",
     "Ainsi, $\\frac{Y_n-n\\mu}{\\sigma\\sqrt{n}}\\xrightarrow[n\\to+\\infty]{\\mathcal{L}}\\mathcal{N}(0,1)$\n",
