--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -49,7 +49,7 @@
     "1)\n",
     "$\\mathbb{E}\\left(X_{i}\\right) = \\frac{1}{2} \\cdot1+\\frac{1}{2}\\cdot(-1)=0$\n",
     "\n",
-    "$\\mathbb{V}\\left(X_{i}\\right)=\\mathbb{E}\\left(\\left(x_{i}-\\mathbb{E}\\left(x_{i}\\right)\\right)^{2}\\right) =\\mathbb{E}\\left(x_{i}^{2}\\right)=\\frac{1}{2} \\cdot 1+\\frac{1}{2}\\cdot1 = 1$"
+    "$\\mathbb{V}\\left(X_{i}\\right)=\\mathbb{E}\\left(\\left(X_{i}-\\mathbb{E}\\left(X_{i}\\right)\\right)^{2}\\right) =\\mathbb{E}\\left(X_{i}^{2}\\right)=\\frac{1}{2} \\cdot 1+\\frac{1}{2}\\cdot1 = 1$"
    ]
   },
   {
@@ -57,9 +57,9 @@
    "metadata": {},
    "source": [
     "2)\n",
-    "$\\mathbb{E}\\left(Y_{n}\\right) =\\sum_{i=1}^{n} \\mathbb{E}\\left(x_{i}\\right)=0$\n",
+    "$\\mathbb{E}\\left(Y_{n}\\right) =\\sum_{i=1}^{n} \\mathbb{E}\\left(X_{i}\\right)=0$\n",
     "\n",
-    "$\\mathbb{V}\\left(Y_{n}\\right) =\\sum_{i=1}^{n} \\mathbb{V}\\left(x_{i}\\right)=n$"
+    "$\\mathbb{V}\\left(Y_{n}\\right) =\\sum_{i=1}^{n} \\mathbb{V}\\left(X_{i}\\right)=n$"
    ]
   },
   {
@@ -993,6 +993,46 @@
    "metadata": {},
    "source": [
     "6. Une généralisation à deux dimensions d'une discrétisation du mouvement brownien standard peut être définie de la manière suivante : notant $(x_i,y_i)$ les coordonnées des points de la grille de discrétisation du domaine $[0,1]^2$, le vecteur formé des $Z_{(x_i,y_i)}$ est gaussien, centré et de covariance $\\text{Cov} = \\min(x_i,x_j) \\times \\min(y_i,y_j)$. Proposer et implémenter un algorithme de simulation de ce modèle sur une grille régulière de discrétisation du domaine $[0,1]^2$. Quelles difficultés rencontrez-vous ?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]\n",
+      " [-1.  -0.5  0.   0.5  1. ]] \n",
+      "\n",
+      " [[-1.  -1.  -1.  -1.  -1. ]\n",
+      " [-0.5 -0.5 -0.5 -0.5 -0.5]\n",
+      " [ 0.   0.   0.   0.   0. ]\n",
+      " [ 0.5  0.5  0.5  0.5  0.5]\n",
+      " [ 1.   1.   1.   1.   1. ]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "def mouvement_brownien(n):\n",
+    "    X=np.linspace(0,1,n)\n",
+    "    Y=np.linspace(0,1,n)\n",
+    "    Z=np.empty(n,n)\n",
+    "    for i in range(n):\n",
+    "        for j in range(i+1): #\n",
+    "            xi=i/n\n",
+    "            xj=j/n\n",
+    "\n",
+    "\n",
+    "\n",
+    "\n",
+    "mouvement_brownien(5,10)"
    ]
   },
   {
