--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -357,6 +357,70 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\tilde{Z}^{(n)}_t=\\frac{1}{\\sqrt{n}}\\sum_{i=1}^n X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))$\n",
+    "\n",
+    "$=\\frac{1}{\\sqrt{n}}\\sum_{i=1}^n\\tilde{X}_i$\n",
+    "\n",
+    "$=\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t$\n",
+    "\n",
+    "On calcul l'espérance et la variance de $\\tilde{X}_i$\n",
+    "\n",
+    "$\\mathbb{E}\\left(\\tilde{X}_i\\right)$\n",
+    "\n",
+    "$\n",
+    "=\\mathbb{E}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)\n",
+    "$\n",
+    "\n",
+    "Par indépendance des deux termes\n",
+    "\n",
+    "$\n",
+    "=\\mathbb{E}\\left(X_i\\right) \\mathbb{E}\\left(1_{[0,U_i]}(t)-1_{]U_i,1]}(t)\\right)\n",
+    "$\n",
+    "\n",
+    "or\n",
+    "\n",
+    "$\n",
+    "\\mathbb{E}\\left(X_i\\right)=0\n",
+    "$\n",
+    "\n",
+    "donc\n",
+    "\n",
+    "$\n",
+    "\\mathbb{E}\\left(\\tilde{X}_i\\right)=0\n",
+    "$\n",
+    "et donc $\\mathbb{E}\\left(\\tilde{Y}^{(n)}_t\\right)=0$\n",
+    "\n",
+    "\n",
+    "$\\mathbb{V}\\left(\\tilde{X}_i\\right)$\n",
+    "\n",
+    "$=\\mathbb{V}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)$\n",
+    "\n",
+    "$=\\mathbb{V}\\left(X_i^2 (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))^2\\right)$\n",
+    "\n",
+    "Tout les termes ne peuvent valoir que 1 on en déduit que $\\mathbb{V}\\left(\\tilde{X}_i\\right)=1$\n",
+    "\n",
+    "et donc que \n",
+    "\n",
+    "$\\mathbb{V}\\left(\\tilde{Y}^{(n)}_t\\right)=n$\n",
+    "\n",
+    "et que \n",
+    "$\\mathbb{V}\\left(\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t\\right)=1$\n",
+    "\n",
+    "On reconnais bien une loi normal centrée en 0 et de variance 1\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
+  },
+  {
    "cell_type": "code",
    "execution_count": 10,
    "metadata": {},
