--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -127,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -175,7 +175,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -202,7 +202,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -234,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -257,7 +257,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -302,8 +302,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "On discrétise l'intervalle $[0,1]$ en $\\bigcup_{i=0}^{n-1}[t_i,t_{i+1}]$, avec $t_i = \\frac{i}{n}$ pour tout $i$."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -329,7 +336,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -366,58 +373,34 @@
     "\n",
     "$=\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t$\n",
     "\n",
-    "On calcul l'espérance et la variance de $\\tilde{X}_i$\n",
+    "On calcule l'espérance et la variance des $\\tilde{X}_i$\n",
     "\n",
     "$\\mathbb{E}\\left(\\tilde{X}_i\\right)$\n",
+    "$=\\mathbb{E}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)$\n",
+    "$=\\mathbb{E}\\left(X_i\\right) \\mathbb{E}\\left(1_{[0,U_i]}(t)-1_{]U_i,1]}(t)\\right)$ par indépendance.\n",
     "\n",
-    "$\n",
-    "=\\mathbb{E}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)\n",
-    "$\n",
+    "or, $\\mathbb{E}\\left(X_i\\right)=0$\n",
     "\n",
-    "Par indépendance des deux termes\n",
-    "\n",
-    "$\n",
-    "=\\mathbb{E}\\left(X_i\\right) \\mathbb{E}\\left(1_{[0,U_i]}(t)-1_{]U_i,1]}(t)\\right)\n",
-    "$\n",
-    "\n",
-    "or\n",
-    "\n",
-    "$\n",
-    "\\mathbb{E}\\left(X_i\\right)=0\n",
-    "$\n",
-    "\n",
-    "donc\n",
-    "\n",
-    "$\n",
-    "\\mathbb{E}\\left(\\tilde{X}_i\\right)=0\n",
-    "$\n",
-    "et donc $\\mathbb{E}\\left(\\tilde{Y}^{(n)}_t\\right)=0$\n",
+    "donc $\\mathbb{E}\\left(\\tilde{X}_i\\right)=0$\n",
+    "et donc $\\mathbb{E}\\left(\\tilde{Z}^{(n)}_t\\right)=0$\n",
     "\n",
     "\n",
-    "$\\mathbb{V}\\left(\\tilde{X}_i\\right)$\n",
+    "$\\mathbb{V}\\left(\\tilde{X}_i\\right) = \\mathbb{V}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)$\n",
     "\n",
-    "$=\\mathbb{V}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)$\n",
+    "$=\\mathbb{E}\\left(X_i^2 (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))^2\\right)$\n",
     "\n",
-    "$=\\mathbb{V}\\left(X_i^2 (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))^2\\right)$\n",
+    "Tout les termes ne peuvent valoir que 1, on en déduit que $\\mathbb{V}\\left(\\tilde{X}_i\\right)=1$\n",
     "\n",
-    "Tout les termes ne peuvent valoir que 1 on en déduit que $\\mathbb{V}\\left(\\tilde{X}_i\\right)=1$\n",
+    "et donc que $\\mathbb{V}\\left(\\tilde{Y}^{(n)}_t\\right)=n$\n",
     "\n",
-    "et donc que \n",
+    "et que $\\mathbb{Z}\\left(\\tilde{Y}^{(n)}_t\\right)=\\mathbb{V}\\left(\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t\\right)=\\frac{n}{n}=1$\n",
     "\n",
-    "$\\mathbb{V}\\left(\\tilde{Y}^{(n)}_t\\right)=n$\n",
-    "\n",
-    "et que \n",
-    "$\\mathbb{V}\\left(\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t\\right)=1$\n",
-    "\n",
-    "On reconnais bien une loi normal centrée en 0 et de variance 1\n",
-    "\n",
-    "\n",
-    "\n"
+    "Puisque les $\\tilde{X}_i$ sont indépendants, identiquement distribués, d'espérance 0 et de variance 1, avec le théorème central limite : $\\forall t \\in [0,1],~ \\tilde{Z}^{(n)}_t\\xrightarrow[n \\to \\infty]{\\mathcal{L}}\\mathcal{N}(0,1)$"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -447,7 +430,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -528,7 +511,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -553,7 +536,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -656,7 +639,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -675,7 +658,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -705,7 +688,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -726,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -770,7 +753,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -800,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -824,7 +807,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -848,7 +831,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -872,7 +855,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -910,7 +893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -942,7 +925,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -990,7 +973,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1015,7 +998,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -1054,7 +1037,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1064,7 +1047,7 @@
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[1;32mc:\\Users\\alexi\\Documents\\python\\pojet_num-rique_proba\\Projet numérique de Probabilités 2022 - enonce.ipynb Cell 54'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/alexi/Documents/python/pojet_num-rique_proba/Projet%20num%C3%A9rique%20de%20Probabilit%C3%A9s%202022%20-%20enonce.ipynb#ch0000052?line=7'>8</a>\u001b[0m             xi\u001b[39m=\u001b[39mi\u001b[39m/\u001b[39mn\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/alexi/Documents/python/pojet_num-rique_proba/Projet%20num%C3%A9rique%20de%20Probabilit%C3%A9s%202022%20-%20enonce.ipynb#ch0000052?line=8'>9</a>\u001b[0m             xj\u001b[39m=\u001b[39mj\u001b[39m/\u001b[39mn\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/alexi/Documents/python/pojet_num-rique_proba/Projet%20num%C3%A9rique%20de%20Probabilit%C3%A9s%202022%20-%20enonce.ipynb#ch0000052?line=13'>14</a>\u001b[0m mouvement_brownien(\u001b[39m5\u001b[39;49m,\u001b[39m10\u001b[39;49m)\n",
+      "\u001b[1;32mc:\\Users\\alexi\\Documents\\python\\pojet_num-rique_proba\\Projet numérique de Probabilités 2022 - enonce.ipynb Cell 55'\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/alexi/Documents/python/pojet_num-rique_proba/Projet%20num%C3%A9rique%20de%20Probabilit%C3%A9s%202022%20-%20enonce.ipynb#ch0000053?line=7'>8</a>\u001b[0m             xi\u001b[39m=\u001b[39mi\u001b[39m/\u001b[39mn\n\u001b[0;32m      <a href='vscode-notebook-cell:/c%3A/Users/alexi/Documents/python/pojet_num-rique_proba/Projet%20num%C3%A9rique%20de%20Probabilit%C3%A9s%202022%20-%20enonce.ipynb#ch0000053?line=8'>9</a>\u001b[0m             xj\u001b[39m=\u001b[39mj\u001b[39m/\u001b[39mn\n\u001b[1;32m---> <a href='vscode-notebook-cell:/c%3A/Users/alexi/Documents/python/pojet_num-rique_proba/Projet%20num%C3%A9rique%20de%20Probabilit%C3%A9s%202022%20-%20enonce.ipynb#ch0000053?line=13'>14</a>\u001b[0m mouvement_brownien(\u001b[39m5\u001b[39;49m,\u001b[39m10\u001b[39;49m)\n",
       "\u001b[1;31mTypeError\u001b[0m: mouvement_brownien() takes 1 positional argument but 2 were given"
      ]
     }
