Ajout de latex quest 2

--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -508,8 +508,46 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "3. Montrer que $\\frac12\\mathbb{E}\\left(\\tilde{Z}^{(n)}_t-\\tilde{Z}^{(n)}_{t+h}\\right)^2 = h$ pour $h>0$ et tel que $t+h \\leq 1$.\n",
+    "3. Montrer que $\\frac12\\mathbb{E}\\left(\\tilde{Z}^{(n)}_t-\\tilde{Z}^{(n)}_{t+h}\\right)^2 = 2h$ pour $h>0$ et tel que $t+h \\leq 1$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "$\\mathbb{E}\\left(\\left(\\tilde{Z}^{(n)}_t-\\tilde{Z}^{(n)}_{t+h}\\right)^2\\right)$\n",
     "\n",
+    "$= \\mathbb{E}\\left({\\tilde{Z}^{(n)}_t}^2\\right)+\\mathbb{E}\\left({\\tilde{Z}^{(n)}_{t+h}}^2\\right)-2\\mathbb{E}\\left(\\tilde{Z}^{(n)}_t\\tilde{Z}^{(n)}_{t+h}\\right)$\n",
+    "\n",
+    "D'après la question 2, on sait que $ \\mathbb{V}\\left( \\tilde{Z}^{(n)}_t\\right)=1$\n",
+    "\n",
+    "$\n",
+    "\\mathbb{E}\\left(\\tilde{Z}^{n}_t \\tilde{Z}^{n}_{t+h}\\right)$\n",
+    "\n",
+    "$=\\frac{1}{n}\\mathbb{E}\\left(\\tilde{Y}_{n}(t)\\tilde{Y}_{n}(t+h)\\right)$\n",
+    "\n",
+    "$=\\frac{1}{n}\\sum_{i}\\mathbb{E}\\left(\\tilde{X}_{i}(t)\\tilde{X}_{i}(t+h)\\right)+\\frac{1}{n}\\sum_{i,j|j\\ne i}\\mathbb{E}\\left(\\tilde{X}_{i}(t)\\tilde{X}_{j}(t+h)\\right)$\n",
+    "\n",
+    "$=\\frac{1}{n}\\sum_{i}\\mathbb{E}\\left({\\tilde{X}_{i}}^2(\\mathbb{1}_{[0,U_i]}(t)-\\mathbb{1}_{]U_i,0]}(t))(\\mathbb{1}_{[0,U_i]}(t+h)-\\mathbb{1}_{]U_i,0]}(t+h))\\right)$\n",
+    "\n",
+    "On distingue ensuite les cas\n",
+    "\n",
+    "On obtient \n",
+    "\n",
+    "$=\\frac{1}{n}\\sum_{i=1}^{n}1(1-t-h)+(-1)h+t = 1-2h$\n",
+    "\n",
+    "En définitive,\n",
+    "\n",
+    "$\\frac{1}{2}\\mathbb{E}\\left(\\left(\\tilde{Z}^{(n)}_t-\\tilde{Z}^{(n)}_{t+h}\\right)^2\\right)$\n",
+    "\n",
+    "$\\frac{1}{2}(1+1-2(1-2h))=2h$\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "4. Le vérifier expérimentalement en calculant $\\frac1{2\\text{card}\\{(i,j),|t_i-t_j|=h\\}}\\sum_{|t_i-t_j|=h}(\\tilde{Z}^{n}_{t_i} - \\tilde{Z}^{n}_{t_j})^2$, où $\\text{card}\\{(i,j),|t_i-t_j|=h\\}$ représente le nombre de couples $(t_i,t_j)$ distants de $h$, pour $h \\in \\{0.001,0.002,\\ldots,0.3\\}$. Représenter graphiquement cette quantité."
    ]
   },
