--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -83,28 +83,34 @@
     "4)\n",
     "Soient  $n, n^{\\prime}\\in \\mathbb{N} \\quad n<n^{\\prime}$\n",
     "\n",
-    "$\\operatorname{Cov}\\left(Y_{n}, Y_{n^{\\prime}}\\right)=\\mathbb{E}\\left(\\left(Y_{n}-\\mathbb{E}\\left(Y_{n}\\right)\\right)\\left(Y_{n^{\\prime}}-\\mathbb{E}\\left(Y_{n^{\\prime}}\\right)\\right)\\right)$\n",
+    "$$\\begin{align*}\n",
+    "\\operatorname{Cov}\\left(Y_{n}, Y_{n^{\\prime}}\\right)&=\\mathbb{E}\\left(\\left(Y_{n}-\\mathbb{E}\\left(Y_{n}\\right)\\right)\\left(Y_{n^{\\prime}}-\\mathbb{E}\\left(Y_{n^{\\prime}}\\right)\\right)\\right) \\\\\n",
     "\n",
-    "$=\\mathbb{E}\\left(Y_{n} Y_{n^{\\prime}}\\right)=\\mathbb{E}\\left(Y_{n} \\sum_{i=1}^{n^{\\prime}} X_{i}\\right)=\\mathbb{E}\\left(Y_{n}\\left(Y_{n}+\\sum_{i=n+1}^{n^{\\prime}} X_{i}\\right)\\right)$\n",
+    "&=\\mathbb{E}\\left(Y_{n} Y_{n^{\\prime}}\\right)=\\mathbb{E}\\left(Y_{n} \\sum_{i=1}^{n^{\\prime}} X_{i}\\right)\\\\\n",
+    "&=\\mathbb{E}\\left(Y_{n}\\left(Y_{n}+\\sum_{i=n+1}^{n^{\\prime}} X_{i}\\right)\\right) \\\\\n",
     "\n",
-    "$=\\mathbb{E}\\left(Y_{n}{ }^{2}\\right)+\\mathbb{E}\\left(Y_{n} \\sum_{i=n+1}^{n^{\\prime}} X_{i}\\right)$\n",
     "\n",
-    "$=\\mathbb{V}\\left(Y_{n}\\right)+\\mathbb{E}\\left(Y_{n}\\right) \\mathbb{E}\\left(\\sum_{i=n+1}^{n^{\\prime}}X_{i}\\right)$ car $Y_n$ indépendent des $(X_i)_{i>n+1}$ (par indépendance des $(X_i)$)\n",
+    "&=\\mathbb{E}\\left(Y_{n}{ }^{2}\\right)+\\mathbb{E}\\left(Y_{n} \\sum_{i=n+1}^{n^{\\prime}} X_{i}\\right)\\\\\n",
     "\n",
-    "$=n+0=n$\n",
+    "&=\\mathbb{V}\\left(Y_{n}\\right)+\\mathbb{E}\\left(Y_{n}\\right) \\mathbb{E}\\left(\\sum_{i=n+1}^{n^{\\prime}}X_{i}\\right)&& \\text{(car $Y_n$ indépendent des $(X_i)_{i>n+1}$ par indépendance des $(X_i)$)}  \\\\\n",
+    "\n",
+    "&=n+0=n\n",
+    "\\end{align*}$$\n",
     "\n",
     "Par symétrie de $n$ et $n^{\\prime}$, \n",
     "$$\\operatorname{Cov}\\left(Y_{n}, Y_{n}^{\\prime}\\right)=\\min \\left(n, n^{\\prime}\\right)$$\n",
     "\n",
     "On en déduit donc que\n",
     "\n",
-    "$\\mathbb{E}\\left(\\left(Y_{n}-Y_{n+h}\\right)^{2}\\right)=\\mathbb{E}\\left(Y_{n}^{2}+Y_{n+h}^{2}-2 Y_{n} Y_{n+h}\\right)$\n",
+    "$$\\begin{align*}\n",
+    "\\mathbb{E}\\left(\\left(Y_{n}-Y_{n+h}\\right)^{2}\\right)&=\\mathbb{E}\\left(Y_{n}^{2}+Y_{n+h}^{2}-2 Y_{n} Y_{n+h}\\right) \\\\\n",
     "\n",
-    "$=\\mathbb{E}\\left(Y_{n}^{2}\\right)+\\mathbb{E}\\left(Y_{n+h}^{2}\\right)-2 \\mathbb{E}\\left(Y_{n} Y_{n+h}\\right)$\n",
+    "&=\\mathbb{E}\\left(Y_{n}^{2}\\right)+\\mathbb{E}\\left(Y_{n+h}^{2}\\right)-2 \\mathbb{E}\\left(Y_{n} Y_{n+h}\\right)\\\\\n",
     "\n",
-    "$=\\mathbb{V}\\left(Y_{n}\\right)+\\mathbb{V}\\left(Y_{n+h}\\right)-2 \\operatorname{Cov}\\left(Y_{n}, Y_{n+h}\\right)$\n",
+    "&=\\mathbb{V}\\left(Y_{n}\\right)+\\mathbb{V}\\left(Y_{n+h}\\right)-2 \\operatorname{Cov}\\left(Y_{n}, Y_{n+h}\\right)\\\\\n",
     "\n",
-    "$=n+n+h-2n=h$\n",
+    "&=n+n+h-2n=h\n",
+    "\\end{align*}$$\n",
     "\n",
     "Donc\n",
     "$$\\frac{1}{2} \\mathbb{E}\\left(\\left(Y_{n}-Y_{n+h}\\right)^{2}\\right)=h/2$$"
@@ -174,6 +180,29 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1)\n",
+    "On vérifie les trois hypothèses :\n",
+    "- $\\forall i \\in \\llbracket 0, n-1 \\rrbracket, ]t_i,t_{i+1}]=]\\frac{i}{n}, \\frac{i+1}{n}] \\ne \\varnothing $\n",
+    "- Si $i \\ne j$, $]t_i,t_{i+1}]\\cap ]t_j,t_{j+1}] = \\varnothing$ (En effet, si $i<j$, alors $i+1\\le j$ donc $t_{i+1}\\le t_j$)\n",
+    "- Soit $x \\in ]0,1]$. $0<nx \\le n$ donc il existe $i \\in \\mathbb{n}$ tel que $i<nx\\le i+1$ et donc $x \\in ]t_i,t_{i+1}] \\subset \\bigcup_{i=0}^{n-1}]t_i,t_{i+1}]$. Ainsi, $\\bigcup_{i=0}^{n-1}]t_i,t_{i+1}]=]0,1]$\n",
+    "\n",
+    "Nous avons donc bien une partition de $]0,1]$."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "2)\n",
+    "Soit $t\\in ]0,1]$, soit $i=[nt] \\in \\llbracket 0, n-1 \\rrbracket$.\n",
+    "\n",
+    "$Z_{t_i}^{(n)}=\\frac{Y_{[nt_i]}}{\\sqrt{n}} = \\frac{Y_{[i]}}{\\sqrt{n}}=\\frac{Y_i}{\\sqrt{n}}=\\frac{Y_{[nt]}}{\\sqrt{n}}=Z_{t}^{(n)}$"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
@@ -230,6 +259,19 @@
     "  tend vers l'infini.\n",
     "  Construire un échantillon de taille 1000 de valeurs de $Z^{(n)}_1$ pour n = 1000. Représenter son histogramme et le comparer avec la densité gaussienne standard.\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Soit $t\\in[0,1]$, $Z^{(n)}_t= \\frac{Y_{[nt]}}{\\sqrt{n}}$\n",
+    "D'après la question 5. de la partie précédente, $\\frac{Y_{[nt]}}{\\sqrt{[nt]}}\\xrightarrow[n \\to \\infty]{\\mathcal{L}}\\mathcal{N}(0,1)$\n",
+    "\n",
+    "Or, $Z^{(n)}_t= \\frac{Y_{[nt]}}{\\sqrt{n}}$\n",
+    "$= \\frac{Y_{[nt]}}{\\sqrt{[nt]}} . \\frac{\\sqrt{[nt]}}{\\sqrt{n}}$, et $\\frac{\\sqrt{[nt]}}{\\sqrt{n}} \\sim \\sqrt{t}$\n",
+    "\n",
+    "Donc $Z^{(n)}_t\\xrightarrow[n \\to \\infty]{\\mathcal{L}}\\mathcal{N}(0,t)$"
    ]
   },
   {
@@ -371,11 +413,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$\\tilde{Z}^{(n)}_t=\\frac{1}{\\sqrt{n}}\\sum_{i=1}^n X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))$\n",
+    "On écrit :\n",
     "\n",
-    "$=\\frac{1}{\\sqrt{n}}\\sum_{i=1}^n\\tilde{X}_i$\n",
+    "$$ \\begin{align*}\n",
+    "\\tilde{Z}^{(n)}_t&=\\frac{1}{\\sqrt{n}}\\sum_{i=1}^n X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\\\\n",
     "\n",
-    "$=\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t$\n",
+    "&=\\frac{1}{\\sqrt{n}}\\sum_{i=1}^n\\tilde{X}_i\\\\\n",
+    "\n",
+    "&=\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t\n",
+    "\\end{align*}$$\n",
     "\n",
     "On calcule l'espérance et la variance des $\\tilde{X}_i$\n",
     "\n",
@@ -389,9 +435,8 @@
     "et donc $\\mathbb{E}\\left(\\tilde{Z}^{(n)}_t\\right)=0$\n",
     "\n",
     "\n",
-    "$\\mathbb{V}\\left(\\tilde{X}_i\\right) = \\mathbb{V}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)$\n",
-    "\n",
-    "$=\\mathbb{E}\\left(X_i^2 (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))^2\\right)$\n",
+    "$\\mathbb{V}\\left(\\tilde{X}_i\\right) = \\mathbb{V}\\left(X_i (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))\\right)\n",
+    "=\\mathbb{E}\\left(X_i^2 (1_{[0,U_i]}(t)-1_{]U_i,1]}(t))^2\\right)$\n",
     "\n",
     "Tous les termes ne peuvent valoir que 1, on en déduit que $\\mathbb{V}\\left(\\tilde{X}_i\\right)=1$\n",
     "\n",
@@ -399,7 +444,9 @@
     "\n",
     "et que $\\mathbb{Z}\\left(\\tilde{Y}^{(n)}_t\\right)=\\mathbb{V}\\left(\\frac{1}{\\sqrt{n}}\\tilde{Y}^{(n)}_t\\right)=\\frac{n}{n}=1$\n",
     "\n",
-    "Puisque les $\\tilde{X}_i$ sont indépendants, identiquement distribués, d'espérance 0 et de variance 1, avec le théorème central limite : $\\forall t \\in [0,1],~ \\tilde{Z}^{(n)}_t\\xrightarrow[n \\to \\infty]{\\mathcal{L}}\\mathcal{N}(0,1)$"
+    "Puisque les $\\tilde{X}_i$ sont indépendants, identiquement distribués, d'espérance 0 et de variance 1, on obtient avec le théorème central limite :\n",
+    "\n",
+    "$$\\forall t \\in [0,1],~ \\tilde{Z}^{(n)}_t\\xrightarrow[n \\to \\infty]{\\mathcal{L}}\\mathcal{N}(0,1)$$"
    ]
   },
   {
@@ -516,32 +563,31 @@
    "metadata": {},
    "source": [
     "$\\mathbb{E}\\left(\\left(\\tilde{Z}^{(n)}_t-\\tilde{Z}^{(n)}_{t+h}\\right)^2\\right)$\n",
-    "\n",
     "$= \\mathbb{E}\\left({\\tilde{Z}^{(n)}_t}^2\\right)+\\mathbb{E}\\left({\\tilde{Z}^{(n)}_{t+h}}^2\\right)-2\\mathbb{E}\\left(\\tilde{Z}^{(n)}_t\\tilde{Z}^{(n)}_{t+h}\\right)$\n",
     "\n",
-    "D'après la question 2, on sait que $ \\mathbb{V}\\left( \\tilde{Z}^{(n)}_t\\right)=1$\n",
+    "D'après la question 2, on sait que $\\mathbb{E}\\left({\\tilde{Z}^{(n)}_t}^2\\right)= \\mathbb{V}\\left( \\tilde{Z}^{(n)}_t\\right)=1$\n",
     "\n",
-    "$\n",
-    "\\mathbb{E}\\left(\\tilde{Z}^{n}_t \\tilde{Z}^{n}_{t+h}\\right)$\n",
+    "$\\mathbb{E}\\left(\\tilde{Z}^{n}_t \\tilde{Z}^{n}_{t+h}\\right)$\n",
     "\n",
     "$=\\frac{1}{n}\\mathbb{E}\\left(\\tilde{Y}_{n}(t)\\tilde{Y}_{n}(t+h)\\right)$\n",
     "\n",
     "$=\\frac{1}{n}\\sum_{i}\\mathbb{E}\\left(\\tilde{X}_{i}(t)\\tilde{X}_{i}(t+h)\\right)+\\frac{1}{n}\\sum_{i,j|j\\ne i}\\mathbb{E}\\left(\\tilde{X}_{i}(t)\\tilde{X}_{j}(t+h)\\right)$\n",
     "\n",
-    "$=\\frac{1}{n}\\sum_{i}\\mathbb{E}\\left({\\tilde{X}_{i}}^2(\\mathbb{1}_{[0,U_i]}(t)-\\mathbb{1}_{]U_i,0]}(t))(\\mathbb{1}_{[0,U_i]}(t+h)-\\mathbb{1}_{]U_i,0]}(t+h))\\right)$\n",
+    "$=\\frac{1}{n}\\sum_{i}\\mathbb{E}\\left({X_{i}}^2(\\mathbb{1}_{[0,U_i]}(t)-\\mathbb{1}_{]U_i,0]}(t))(\\mathbb{1}_{[0,U_i]}(t+h)-\\mathbb{1}_{]U_i,0]}(t+h))\\right)$\n",
     "\n",
-    "On distingue ensuite les cas\n",
+    "On distingue ensuite les cas :\n",
+    "- Si $U_i \\in [0,t],{X_{i}}^2(\\mathbb{1}_{[0,U_i]}(t)-\\mathbb{1}_{]U_i,0]}(t))(\\mathbb{1}_{[0,U_i]}(t+h)-\\mathbb{1}_{]U_i,0]}(t+h))=1$\n",
+    "- Si $U_i \\in [t,t+h], {X_{i}}^2(\\mathbb{1}_{[0,U_i]}(t)-\\mathbb{1}_{]U_i,0]}(t))(\\mathbb{1}_{[0,U_i]}(t+h)-\\mathbb{1}_{]U_i,0]}(t+h))=-1$\n",
+    "- Si $U_i \\in [t+h,1], {X_{i}}^2(\\mathbb{1}_{[0,U_i]}(t)-\\mathbb{1}_{]U_i,0]}(t))(\\mathbb{1}_{[0,U_i]}(t+h)-\\mathbb{1}_{]U_i,0]}(t+h))=1$\n",
     "\n",
-    "On obtient \n",
+    "On obtient donc :\n",
     "\n",
     "$=\\frac{1}{n}\\sum_{i=1}^{n}1(1-t-h)+(-1)h+t = 1-2h$\n",
     "\n",
     "En définitive,\n",
     "\n",
     "$\\frac{1}{2}\\mathbb{E}\\left(\\left(\\tilde{Z}^{(n)}_t-\\tilde{Z}^{(n)}_{t+h}\\right)^2\\right)$\n",
-    "\n",
-    "$\\frac{1}{2}(1+1-2(1-2h))=2h$\n",
-    "\n"
+    "$=\\frac{1}{2}(1+1-2(1-2h))=2h$"
    ]
   },
   {
@@ -662,8 +708,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "La deuxième approche rajoute un critère aléatoire avec la loi uniforme sur ]0,1[, qui augmente la variogramme de Z et donc son irrégularité. La variable Z converge toujours en loi vers $\\mathcal{N}(0,1)$ mais elle est moins régulière.\n",
-    "\n",
     "Cette nouvelle approche permet de définir la marche aléatoire sur tout l'intervalle $[0,1]$. En effet, à partir des variables $X_1, .. X_n$, on définit toutes les valeurs de la n-e étape de la marche pour les $t_i=i/n$.\n",
     "\n",
     "Cela revient finalement diviser $n$ fois notre intervalle $[0,1]$ en deux parties, l'une recevra $X_i$, et l'autre $-X_i$ à chaque étape. Chaque partie a une probabilité 1/2 de recevoir 1 et -1, et ce $n$ fois. C'est une généralisation de la première méthode, qui revient à calculer cette nouvelle variable en un unique point ($t=0$ par exemple)."
@@ -1018,14 +1062,14 @@
    "outputs": [],
    "source": [
     "def marche_aleatoire_generalisee(resolution,n,taille):\n",
-    "    A=np.random.uniform(0,math.pi,n)\n",
+    "    A=np.random.uniform(0,np.pi,n)\n",
     "    P=np.random.uniform(-2**0.5,taille*2**0.5,n)\n",
     "    X=np.linspace(-taille,taille,resolution)\n",
     "    Y=np.linspace(-taille,taille,resolution)\n",
     "    grx,gry=np.meshgrid(X,Y)\n",
     "    S=np.zeros((resolution,resolution))\n",
     "    for k in range(n):\n",
-    "        Z=grx*math.cos(A[k])+gry*math.sin(A[k]) - P[k]\n",
+    "        Z=grx*np.cos(A[k])+gry*np.sin(A[k]) - P[k]\n",
     "        x=alea() #on choisit aléatoirement quelle partie recevra la valeur -1 et l'autre 1\n",
     "        for i in range(resolution):\n",
     "            for j in range(resolution):\n",
