--- a/Projet numérique de Probabilités 2022 - enonce.ipynb
+++ b/Projet numérique de Probabilités 2022 - enonce.ipynb
@@ -276,7 +276,9 @@
     "D'après la question 5. de la partie précédente, $\\frac{Y_{[nt]}}{\\sqrt{[nt]}}\\xrightarrow[n \\to \\infty]{\\mathcal{L}}\\mathcal{N}(0,1)$\n",
     "\n",
     "Or, $Z^{(n)}_t= \\frac{Y_{[nt]}}{\\sqrt{n}}$\n",
-    "$= \\frac{Y_{[nt]}}{\\sqrt{[nt]}} . \\frac{\\sqrt{[nt]}}{\\sqrt{n}}$, et $\\frac{\\sqrt{[nt]}}{\\sqrt{n}} \\sim \\sqrt{t}$\n",
+    "$= \\frac{Y_{[nt]}}{\\sqrt{[nt]}} . \\frac{\\sqrt{[nt]}}{\\sqrt{n}}$\n",
+    "\n",
+    "Et $\\frac{\\sqrt{[nt]}}{\\sqrt{n}} \\sim \\sqrt{t}$\n",
     "\n",
     "Donc $Z^{(n)}_t\\xrightarrow[n \\to \\infty]{\\mathcal{L}}\\mathcal{N}(0,t)$"
    ]
